# PackageKit

./: meson.build  meson_options.txt
backends/guix/: meson.build
backends/guix/packagekit/: README.org  meson.build  pk-filters.scm  pk-guile-interface.scm  pk-id.scm  pk-profile.scm  pk-query.scm
backends/guix/src/: meson.build  pk-backend-guix.c  pk-backend-guix.h  pk-guile-interface.c  pk-guile-interface.h
data/: org.freedesktop.PackageKit.service.in
src/: pk-backend.h  pk-main.c
